test_regress/t/t_sampled_expr_unsup.out
%Error-UNSUPPORTED: t/t_sampled_expr_unsup.v:34:36: Unsupported: Write to variable in sampled expression
                                                  : ... In instance t.t1
   34 |    assert property (@(posedge clk) a++ >= 0);
      |                                    ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
